--- a/tests/unit/BUILD
+++ b/tests/unit/BUILD
@@ -5,7 +5,7 @@ load(":fixtures.bzl", "fixtures_header")
 llvm_version = "18"
 
 filegroup(
-    name = "used_fixtures",
+    name = "fixtures",
     srcs = [
         ":fixtures/hardcode/APInt_9a3c2a89c9f30b6c2ab9a1afce2b65d6_213_0_17_negate_mutator.ll",
         "//tests/unit/fixtures/junk_detection/compdb:compdb_absolute",
@@ -17,45 +17,57 @@ filegroup(
         "//tests/unit/fixtures/junk_detection/compdb:db_with_fullpath_compiler.json",
         "//tests/unit/fixtures/junk_detection/compdb:db_with_output.json",
         "//tests/unit/fixtures/junk_detection/compdb:include",
-        "//tests/unit/fixtures/junk_detection/compdb:main.cpp.bc",
-        "//tests/unit/fixtures/mutation_filters/file_path:some_test_file_name.c.bc",
-        "//tests/unit/fixtures/mutation_filters/no_debug_filter:with_debug.c.bc",
-        "//tests/unit/fixtures/mutation_filters/no_debug_filter:without_debug.c.bc",
-        "//tests/unit/fixtures/mutators:and_or/and_to_or_replacement_cpp/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:and_or/or_to_and_replacement_cpp/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:bitwise/bitops.cpp.bc",
-        "//tests/unit/fixtures/mutators:bitwise/shifts.cpp.bc",
-        "//tests/unit/fixtures/mutators:boundary/module.cpp.bc",
-        "//tests/unit/fixtures/mutators:math/bitwise_not.cpp.bc",
-        "//tests/unit/fixtures/mutators:math/unary_minus.cpp.bc",
-        "//tests/unit/fixtures/mutators:math_add/module.cpp.bc",
-        "//tests/unit/fixtures/mutators:math_div/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:math_mul/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:math_sub/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:negate_condition/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:rem_to_div/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:remove_negation/main.c.bc",
-        "//tests/unit/fixtures/mutators:remove_void_function/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:replace_assignment/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:replace_assignment/module.c.bc",
-        "//tests/unit/fixtures/mutators:replace_call/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:replace_call/module.c.bc",
-        "//tests/unit/fixtures/mutators:scalar_value/junk.cpp.bc",
-        "//tests/unit/fixtures/mutators:scalar_value/module.c.bc",
-        "//tests/unit/fixtures/simple_test/count_letters:count_letters.c.bc",
-        "//tests/unit/fixtures/simple_test/count_letters:test_count_letters.c.bc",
+    ],
+)
+
+filegroup(
+    name = "generated_fixtures_%s" % llvm_version,
+    srcs = [
+        "//tests/unit/fixtures/junk_detection/compdb:%s_main.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutation_filters/file_path:%s_some_test_file_name.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutation_filters/no_debug_filter:%s_with_debug.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutation_filters/no_debug_filter:%s_without_debug.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_and_or/and_to_or_replacement_cpp/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_and_or/or_to_and_replacement_cpp/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_bitwise/bitops.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_bitwise/shifts.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_boundary/module.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math/bitwise_not.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math/unary_minus.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math_add/module.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math_div/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math_mul/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_math_sub/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_negate_condition/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_rem_to_div/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_remove_negation/main.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_remove_void_function/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_replace_assignment/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_replace_assignment/module.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_replace_call/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_replace_call/module.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_scalar_value/junk.cpp.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_scalar_value/module.c.bc" % llvm_version,
+        "//tests/unit/fixtures/simple_test/count_letters:%s_count_letters.c.bc" % llvm_version,
+        "//tests/unit/fixtures/simple_test/count_letters:%s_test_count_letters.c.bc" % llvm_version,
     ],
 )
 
 fixtures_header(
-    name = "fixture_header",
-    fixtures = [":used_fixtures"],
-    header = "FixturePaths.h",
+    name = "fixture_header_%s" % llvm_version,
+    fixtures = [
+        "generated_fixtures_%s" % llvm_version,
+        ":fixtures",
+    ],
+    header = "%s/FixturePaths.h" % llvm_version,
 )
 
 cc_library(
-    name = "FixturePaths",
-    hdrs = [":FixturePaths.h"],
+    name = "fixture_header_lib_%s" % llvm_version,
+    hdrs = [
+        "fixture_header_%s" % llvm_version,
+    ],
+    strip_include_prefix = llvm_version,
 )
 
 cc_library(
@@ -72,15 +84,15 @@ filegroup(
 filegroup(
     name = "MutationFilters/MutationFilterTests.cpp_%s_fixtures" % llvm_version,
     srcs = [
-        "//tests/unit/fixtures/mutation_filters/file_path:some_test_file_name.c.bc",
-        "//tests/unit/fixtures/mutation_filters/no_debug_filter:with_debug.c.bc",
-        "//tests/unit/fixtures/mutation_filters/no_debug_filter:without_debug.c.bc",
+        "//tests/unit/fixtures/mutation_filters/file_path:%s_some_test_file_name.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutation_filters/no_debug_filter:%s_with_debug.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutation_filters/no_debug_filter:%s_without_debug.c.bc" % llvm_version,
     ],
 )
 
 filegroup(
     name = "Mutators/ConditionalsBoundaryMutatorTests.cpp_%s_fixtures" % llvm_version,
-    srcs = ["//tests/unit/fixtures/mutators:boundary/module.cpp.bc"],
+    srcs = ["//tests/unit/fixtures/mutators:%s_boundary/module.cpp.bc" % llvm_version],
 )
 
 filegroup(
@@ -90,15 +102,15 @@ filegroup(
 
 filegroup(
     name = "Mutators/ScalarValueMutatorTest.cpp_%s_fixtures" % llvm_version,
-    srcs = ["//tests/unit/fixtures/mutators:scalar_value/module.c.bc"],
+    srcs = ["//tests/unit/fixtures/mutators:%s_scalar_value/module.c.bc" % llvm_version],
 )
 
 filegroup(
     name = "MutationTestingElementsReporterTest.cpp_%s_fixtures" % llvm_version,
     srcs = [
         "//tests/unit/fixtures/simple_test/count_letters:count_letters.c",
-        "//tests/unit/fixtures/simple_test/count_letters:count_letters.c.bc",
-        "//tests/unit/fixtures/simple_test/count_letters:test_count_letters.c.bc",
+        "//tests/unit/fixtures/simple_test/count_letters:%s_count_letters.c.bc" % llvm_version,
+        "//tests/unit/fixtures/simple_test/count_letters:%s_test_count_letters.c.bc" % llvm_version,
     ],
 )
 
@@ -114,9 +126,9 @@ filegroup(
     name = "MutationPointTests.cpp_%s_fixtures" % llvm_version,
     srcs = [
         "//tests/unit/fixtures/mutators:replace_assignment/module.c",
-        "//tests/unit/fixtures/mutators:replace_assignment/module.c.bc",
-        "//tests/unit/fixtures/mutators:replace_call/module.c.bc",
-        "//tests/unit/fixtures/mutators:scalar_value/module.c.bc",
+        "//tests/unit/fixtures/mutators:%s_replace_assignment/module.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_replace_call/module.c.bc" % llvm_version,
+        "//tests/unit/fixtures/mutators:%s_scalar_value/module.c.bc" % llvm_version,
     ],
 )
 
@@ -127,43 +139,43 @@ filegroup(
         "//tests/unit/fixtures/junk_detection/compdb:compdb_relative",
         "//tests/unit/fixtures/junk_detection/compdb:include/header.h",
         "//tests/unit/fixtures/junk_detection/compdb:main.cpp",
-        "//tests/unit/fixtures/junk_detection/compdb:main.cpp.bc",
+        "//tests/unit/fixtures/junk_detection/compdb:%s_main.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:and_or/and_to_or_replacement_cpp/junk.cpp",
-        "//tests/unit/fixtures/mutators:and_or/and_to_or_replacement_cpp/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_and_or/and_to_or_replacement_cpp/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:and_or/or_to_and_replacement_cpp/junk.cpp",
-        "//tests/unit/fixtures/mutators:and_or/or_to_and_replacement_cpp/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_and_or/or_to_and_replacement_cpp/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:bitwise/bitops.cpp",
-        "//tests/unit/fixtures/mutators:bitwise/bitops.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_bitwise/bitops.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:bitwise/shifts.cpp",
-        "//tests/unit/fixtures/mutators:bitwise/shifts.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_bitwise/shifts.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:boundary/module.cpp",
-        "//tests/unit/fixtures/mutators:boundary/module.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_boundary/module.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math/bitwise_not.cpp",
-        "//tests/unit/fixtures/mutators:math/bitwise_not.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math/bitwise_not.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math/unary_minus.cpp",
-        "//tests/unit/fixtures/mutators:math/unary_minus.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math/unary_minus.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math_add/module.cpp",
-        "//tests/unit/fixtures/mutators:math_add/module.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math_add/module.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math_div/junk.cpp",
-        "//tests/unit/fixtures/mutators:math_div/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math_div/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math_mul/junk.cpp",
-        "//tests/unit/fixtures/mutators:math_mul/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math_mul/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:math_sub/junk.cpp",
-        "//tests/unit/fixtures/mutators:math_sub/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_math_sub/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:negate_condition/junk.cpp",
-        "//tests/unit/fixtures/mutators:negate_condition/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_negate_condition/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:rem_to_div/junk.cpp",
-        "//tests/unit/fixtures/mutators:rem_to_div/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_rem_to_div/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:remove_negation/main.c",
-        "//tests/unit/fixtures/mutators:remove_negation/main.c.bc",
+        "//tests/unit/fixtures/mutators:%s_remove_negation/main.c.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:remove_void_function/junk.cpp",
-        "//tests/unit/fixtures/mutators:remove_void_function/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_remove_void_function/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:replace_assignment/junk.cpp",
-        "//tests/unit/fixtures/mutators:replace_assignment/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_replace_assignment/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:replace_call/junk.cpp",
-        "//tests/unit/fixtures/mutators:replace_call/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_replace_call/junk.cpp.bc" % llvm_version,
         "//tests/unit/fixtures/mutators:scalar_value/junk.cpp",
-        "//tests/unit/fixtures/mutators:scalar_value/junk.cpp.bc",
+        "//tests/unit/fixtures/mutators:%s_scalar_value/junk.cpp.bc" % llvm_version,
     ],
 )
 
@@ -204,7 +216,7 @@ filegroup(name = "Mutations-E2E/Scalar/02_Mutation_Scalar_BinaryOperand_Test.cpp
         deps = [
             "//:libmull_%s" % llvm_version,
             ":unit_test_helpers_%s" % llvm_version,
-            ":FixturePaths",
+            ":fixture_header_lib_%s" % llvm_version,
             "@googletest//:gtest",
             "@googletest//:gtest_main",
         ],
