--- a/tests/unit/fixtures/mutation_filters/file_path/BUILD
+++ b/tests/unit/fixtures/mutation_filters/file_path/BUILD
@@ -5,12 +5,12 @@ package(default_visibility = ["//visibility:public"])
 llvm_version = "18"
 
 fixture(
-    name = "some_test_file_name.c.bc",
+    name = "%s_some_test_file_name.c.bc" % llvm_version,
     args = [
         "-c",
         "-g",
         "-emit-llvm",
     ],
-    compiler = "@llvm_%s//:clangxx" % llvm_version,
+    compiler = "@llvm_%s//:clang" % llvm_version,
     fixture = "some_test_file_name.c",
 )
