--- a/tests/unit/fixtures/mutators/BUILD
+++ b/tests/unit/fixtures/mutators/BUILD
@@ -6,7 +6,7 @@ llvm_version = "18"
 
 [
     fixture(
-        name = "%s.bc" % f,
+        name = "%s_%s.bc" % (llvm_version, f),
         args = [
             "-g",
             "-c",
@@ -15,14 +15,12 @@ llvm_version = "18"
         compiler = "@llvm_%s//:clangxx" % llvm_version,
         fixture = f,
     )
-    for f in glob([
-        "**/*.cpp",
-    ])
+    for f in glob(["**/*.cpp"])
 ]
 
 [
     fixture(
-        name = "%s.bc" % f,
+        name = "%s_%s.bc" % (llvm_version, f),
         args = [
             "-g",
             "-c",
