--- a/tests/unit/fixtures/junk_detection/compdb/BUILD
+++ b/tests/unit/fixtures/junk_detection/compdb/BUILD
@@ -1,3 +1,4 @@
+load("@available_llvm_versions//:mull_llvm_versions.bzl", "AVAILABLE_LLVM_VERSIONS")
 load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
 load("//tests/unit:fixtures.bzl", "fixture")
 
@@ -5,22 +6,23 @@ package(default_visibility = ["//visibility:public"])
 
 exports_files(glob(["*.json"]) + ["include"])
 
-llvm_version = "18"
-
-fixture(
-    name = "%s_main.cpp.bc" % llvm_version,
-    args = [
-        "-g",
-        "-c",
-        "-emit-llvm",
-        "-Iinclude",
-    ],
-    compiler = "@llvm_%s//:clangxx" % llvm_version,
-    data = [
-        ":include/header.h",
-    ],
-    fixture = "main.cpp",
-)
+[
+    fixture(
+        name = "%s_main.cpp.bc" % llvm_version,
+        args = [
+            "-g",
+            "-c",
+            "-emit-llvm",
+            "-Iinclude",
+        ],
+        compiler = "@llvm_%s//:clangxx" % llvm_version,
+        data = [
+            ":include/header.h",
+        ],
+        fixture = "main.cpp",
+    )
+    for llvm_version in AVAILABLE_LLVM_VERSIONS
+]
 
 expand_template(
     name = "compdb_absolute",
