--- a/tests/unit/fixtures/mutation_filters/file_path/BUILD
+++ b/tests/unit/fixtures/mutation_filters/file_path/BUILD
@@ -1,16 +1,18 @@
+load("@available_llvm_versions//:mull_llvm_versions.bzl", "AVAILABLE_LLVM_VERSIONS")
 load("//tests/unit:fixtures.bzl", "fixture")
 
 package(default_visibility = ["//visibility:public"])
 
-llvm_version = "18"
-
-fixture(
-    name = "%s_some_test_file_name.c.bc" % llvm_version,
-    args = [
-        "-c",
-        "-g",
-        "-emit-llvm",
-    ],
-    compiler = "@llvm_%s//:clang" % llvm_version,
-    fixture = "some_test_file_name.c",
-)
+[
+    fixture(
+        name = "%s_some_test_file_name.c.bc" % llvm_version,
+        args = [
+            "-c",
+            "-g",
+            "-emit-llvm",
+        ],
+        compiler = "@llvm_%s//:clang" % llvm_version,
+        fixture = "some_test_file_name.c",
+    )
+    for llvm_version in AVAILABLE_LLVM_VERSIONS
+]
