--- a/tests/unit/fixtures/mutators/BUILD
+++ b/tests/unit/fixtures/mutators/BUILD
@@ -1,8 +1,8 @@
+load("@available_llvm_versions//:mull_llvm_versions.bzl", "AVAILABLE_LLVM_VERSIONS")
+load("@bazel_itertools//lib:itertools.bzl", "itertools")
 load("//tests/unit:fixtures.bzl", "fixture")
 
 package(default_visibility = ["//visibility:public"])
-
-llvm_version = "18"
 
 [
     fixture(
@@ -15,7 +15,10 @@ llvm_version = "18"
         compiler = "@llvm_%s//:clangxx" % llvm_version,
         fixture = f,
     )
-    for f in glob(["**/*.cpp"])
+    for (f, llvm_version) in itertools.product(
+        glob(["**/*.cpp"]),
+        AVAILABLE_LLVM_VERSIONS,
+    )
 ]
 
 [
@@ -29,5 +32,8 @@ llvm_version = "18"
         compiler = "@llvm_%s//:clang" % llvm_version,
         fixture = f,
     )
-    for f in glob(["**/*.c"])
+    for (f, llvm_version) in itertools.product(
+        glob(["**/*.c"]),
+        AVAILABLE_LLVM_VERSIONS,
+    )
 ]
