Use precompiled pips

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -58,7 +58,9 @@ pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
 pip.parse(
     hub_name = "pypi",
     python_version = "3.13",
-    requirements_lock = "//:requirements.txt",
+    # requirements_lock = "//:requirements.txt",
+    requirements_darwin = "requirements_lock_macos.txt",
+    requirements_linux = "requirements_lock_linux.txt",
 )
 
 use_repo(pip, "pypi")
