--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ module(
 
 bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "rules_pkg", version = "1.1.0")
+bazel_dep(name = "rules_shell", version = "0.4.0")
 
 bazel_dep(name = "toolchains_llvm", version = "1.3.0")
 git_override(
@@ -46,7 +47,7 @@ http_archive(
     build_file = ":third_party/json11/json11.BUILD",
 )
 
-bazel_dep(name = "rules_python", version = "1.2.0")
+bazel_dep(name = "rules_python", version = "1.3.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
@@ -58,7 +59,6 @@ pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
 pip.parse(
     hub_name = "pypi",
     python_version = "3.13",
-    # requirements_lock = "//:requirements.txt",
     requirements_darwin = "requirements_lock_macos.txt",
     requirements_linux = "requirements_lock_linux.txt",
 )
