--- a/.devcontainer/ubuntu_24.04_17/Dockerfile
+++ b/.devcontainer/ubuntu_24.04_17/Dockerfile
@@ -42,4 +42,14 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   libc++abi-18-dev \
   clang-18
 
-USER ubuntu
+ARG USERNAME=mull
+ARG USER_UID=1042
+ARG USER_GID=$USER_UID
+
+# Create the user
+RUN groupadd --gid $USER_GID $USERNAME \
+  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+  && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+  && chmod 0440 /etc/sudoers.d/$USERNAME
+
+USER $USERNAME
