Build fmtlib with foreign_cc

--- a/tests/end2end/BUILD
+++ b/tests/end2end/BUILD
@@ -1,32 +1,14 @@
-load("@available_llvm_versions//:mull_llvm_versions.bzl", "CXX_PATHS")
+load("@available_llvm_versions//:mull_llvm_versions.bzl", "CC_PATHS", "CXX_PATHS")
 load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
 
-TEST_TARGETS = [
-    "args-test",
-    "assert-test",
-    "base-test",
+# Picking some tests, not all the tests within fmtlib
+FMT_TEST_TARGETS = [
     "chrono-test",
-    "color-test",
-    "compile-fp-test",
-    "compile-test",
-    "enforce-checks-test",
     "format-test",
-    "gtest-extra-test",
-    "no-builtin-types-test",
-    "os-test",
     "ostream-test",
     "printf-test",
-    "ranges-test",
     "scan-test",
-    "std-test",
-    "unicode-test",
-    "xchar-test",
 ]
-
-filegroup(
-    name = "all_srcs",
-    srcs = glob(["fmt/**"]),
-)
 
 llvm_version = "18"
 
@@ -37,26 +19,22 @@ cmake(
         ":mull.yml",
     ],
     copts = [
-        "-gdwarf-5",
-        "-gembed-source",
         "-grecord-command-line",
         "-g",
-        "-fpass-plugin=/private/var/tmp/_bazel_alexdenisov/a287b22490debf48c4aafe63e4cbb281/execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/libmull-cxx-ir-frontend-18.dylib",
     ],
-    # data = [
-    #     "//:mull-cxx-ir-frontend-%s" % llvm_version,
-    # ],
+    data = [
+        "//:mull-cxx-ir-frontend-%s" % llvm_version,
+    ],
     env = {
+        "CC": CC_PATHS[llvm_version],
         "CXX": CXX_PATHS[llvm_version],
+        "CFLAGS": "-fpass-plugin=$(execpath //:mull-cxx-ir-frontend-%s)" % llvm_version,
+        "CXXFLAGS": "-fpass-plugin=$(execpath //:mull-cxx-ir-frontend-%s)" % llvm_version,
         "MULL_CONFIG": "$(execpath :mull.yml)",
     },
-    generate_args = [
-        "-G Ninja",
-    ],
-    # lib_source = "@e2e_test_fmt//:all_srcs",
-    lib_source = ":all_srcs",
-    out_binaries = TEST_TARGETS,
-    targets = TEST_TARGETS,
+    lib_source = "@e2e_test_fmt//:all_srcs",
+    out_binaries = FMT_TEST_TARGETS,
+    targets = FMT_TEST_TARGETS,
 )
 
 # mull_end2end(
