Add fmtlib diff test

--- a/tests/end2end/BUILD
+++ b/tests/end2end/BUILD
@@ -1,6 +1,7 @@
 load("@available_llvm_versions//:mull_llvm_versions.bzl", "CC_PATHS", "CXX_PATHS")
+load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
 load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
-load(":end2end_test.bzl", "mull_fmtlib_sqlite_report")
+load(":end2end_test.bzl", "generate_ide_report", "mull_fmtlib_sqlite_report")
 
 # Picking some tests, not all the tests within fmtlib
 FMT_TEST_TARGETS = [
@@ -14,7 +15,7 @@ FMT_TEST_TARGETS = [
 llvm_version = "18"
 
 cmake(
-    name = "fmt_e2e_test_%s" % llvm_version,
+    name = "fmt_e2e_%s" % llvm_version,
     build_args = ["-v"],
     build_data = [
         ":mull.yml",
@@ -39,7 +40,19 @@ cmake(
 )
 
 mull_fmtlib_sqlite_report(
-    name = "fmt_test_%s" % llvm_version,
+    name = "fmt_sqlite_report_%s" % llvm_version,
     mull_runner = "//:mull-runner-%s" % llvm_version,
-    target = ":fmt_e2e_test_%s" % llvm_version,
+    target = ":fmt_e2e_%s" % llvm_version,
+)
+
+generate_ide_report(
+    name = "fmt_ide_report_%s" % llvm_version,
+    mull_reporter = "//:mull-reporter-%s" % llvm_version,
+    sqlite_report = "fmt_sqlite_report_%s" % llvm_version,
+)
+
+diff_test(
+    name = "fmtlib_ide_report_test_%s" % llvm_version,
+    file1 = ":fmtlib_expected_ide_report.txt",
+    file2 = "fmt_ide_report_%s" % llvm_version,
 )
