crossplatform fmtlib diff test

--- a/.devcontainer/ubuntu_24.04_18/Dockerfile
+++ b/.devcontainer/ubuntu_24.04_18/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   libclang-18-dev \
   libc++-18-dev \
   libc++abi-18-dev \
-  clang-18
+  clang-18 lld-18
 
 ARG USERNAME=mull
 ARG USER_UID=1042
