--- a/.github/workflows/ci-ubuntu-arm64.yml
+++ b/.github/workflows/ci-ubuntu-arm64.yml
@@ -6,8 +6,8 @@ on:
   push:
     branches: ["main"]
     tags: ["**"]
-  pull_request:
-    branches: ["main"]
+#  pull_request:
+#    branches: ["main"]
 jobs:
   build-and-test:
     runs-on: ubuntu-24.04-arm
