--- a/.github/workflows/ci-macOS.yml
+++ b/.github/workflows/ci-macOS.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        LLVM_VERSION: [16, 17, 18]
+        LLVM_VERSION: [16, 17, 18, 19]
     steps:
       - name: Fix git
         run: |
