--- a/.github/workflows/ci-macOS.yml
+++ b/.github/workflows/ci-macOS.yml
@@ -33,7 +33,18 @@ jobs:
       - name: Publish package
         if: env.CLOUDSMITH_API_KEY != null
         run: |
-          bazel run publish
+          bazel run publish && exit 0
+
+          max_attempts=3
+          attempt=1
+          until [ "$attempt" -ge "$max_attempts" ]
+          do
+            echo "Attempt $attempt failed. Retrying..."
+            attempt=$((attempt+1))
+            bazel run publish && exit 0
+          done
+          echo "All $max_attempts attempts failed."
+          exit 1
       - name: Move package
         run: |
           mkdir -p /tmp/packages
