--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,20 +11,36 @@ bazel_dep(name = "rules_shell", version = "0.4.0")
 bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
 bazel_dep(name = "rules_multirun", version = "0.11.0")
 
-bazel_dep(name = "toolchains_llvm", version = "1.3.0")
-git_override(
-    module_name = "toolchains_llvm",
-    commit = "14eb90172b3c5f35bdb2699d006fe0f70e76aa24",
-    remote = "https://github.com/bazel-contrib/toolchains_llvm",
-)
+bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 
-# Configure and register the toolchain.
-llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
+TOOLCHAIN_VERSION = "18450561443"
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
 llvm.toolchain(
-    llvm_version = "20.1.0",
+    llvm_version = "19.1.7",
     stdlib = {
         "linux-x86_64": "stdc++",
         "linux-aarch64": "stdc++",
+    },
+    strip_prefix = {
+        "darwin-aarch64": "Darwin-aarch64.toolchain",
+        "linux-aarch64": "Linux-aarch64.toolchain",
+        "linux-x86_64": "Linux-x86_64.toolchain",
+    },
+    sha256 = {
+        "darwin-aarch64": "23ca5654dff23c2a7d7d14fc27a32eab9467e2a9b0e665654ef7c142a549e093",
+        "linux-aarch64": "a45eed3d57bf6199d712f897a616037adcabab53770af6325c92bce0efd3abdb",
+        "linux-x86_64": "dc80e312fe8d37e039173ff549d856d1751c4e265e318b87e6c8b877599b95ac",
+    },
+    urls = {
+        "darwin-aarch64": [
+            "https://github.com/mull-project/toolchains/releases/download/%s/Darwin-aarch64.toolchain.tar.xz" % TOOLCHAIN_VERSION,
+        ],
+        "linux-aarch64": [
+            "https://github.com/mull-project/toolchains/releases/download/%s/Linux-aarch64.toolchain.tar.xz" % TOOLCHAIN_VERSION,
+        ],
+        "linux-x86_64": [
+            "https://github.com/mull-project/toolchains/releases/download/%s/Linux-x86_64.toolchain.tar.xz" % TOOLCHAIN_VERSION,
+        ],
     },
 )
 
