--- a/.github/workflows/ci-RHEL_9.6-x86_64.yml
+++ b/.github/workflows/ci-RHEL_9.6-x86_64.yml
@@ -1,4 +1,4 @@
-{{=[[ ]]=}}name: [[ OS_NAME ]] [[OS_VERSION]] CI
+name: RHEL 9.6 (x86_64) CI
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -10,11 +10,11 @@ on:
     branches: ["main"]
 jobs:
   build-and-test:
-    runs-on: [[ OS_RUNNER ]]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        LLVM_VERSION: [[LLVM_VERSIONS]]
-    name: [[ OS_NAME ]] [[OS_VERSION]] - LLVM ${{ matrix.LLVM_VERSION }}
+        LLVM_VERSION: [19]
+    name: RHEL 9.6 - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/setup-bazel-cache
@@ -28,25 +28,28 @@ jobs:
       - name: Build, test, package
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/mull-project/internal-[[ OS_NAME_LOWER ]]_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}-ci
-          configFile: ./.devcontainer/ubuntu_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-rhel-x86_64_9.6-llvm-${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/rhel_9.6-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
             mkdir -p packages
             # https://arrdem.com/2024/01/11/bazel-glibc/
             build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
             bazel build //... --copt=-DPLATFORM_FINGERPRINT=$build_salt --action_env=PLATFORM_FINGERPRINT=$build_salt
             bazel test //... --copt=-DPLATFORM_FINGERPRINT=$build_salt --action_env=PLATFORM_FINGERPRINT=$build_salt
-            mv -v bazel-bin/Mull-*.deb packages/
+            mv -v bazel-bin/Mull-*.rpm packages/
       - name: Publish package
         uses: devcontainers/ci@v0.3
         if: env.CLOUDSMITH_API_KEY != null
         with:
-          imageName: ghcr.io/mull-project/internal-[[ OS_NAME_LOWER ]]_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}-ci
-          configFile: ./.devcontainer/ubuntu_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-rhel-x86_64_9.6-llvm-${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/rhel_9.6-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           push: never
           env: CLOUDSMITH_API_KEY
           runCmd: |
-            bazel run publish && exit 0
+            build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
+            bazel run publish \
+              --copt=-DPLATFORM_FINGERPRINT=$build_salt \
+              --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
 
             max_attempts=3
             attempt=1
@@ -54,14 +57,16 @@ jobs:
             do
               echo "Attempt $attempt failed. Retrying..."
               attempt=$((attempt+1))
-              bazel run publish && exit 0
+              bazel run publish \
+                --copt=-DPLATFORM_FINGERPRINT=$build_salt \
+                --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
             done
             echo "All $max_attempts attempts failed."
             exit 1
       - name: Move package
         run: |
           mkdir -p /tmp/packages
-          sudo mv -v packages/Mull-*.deb /tmp/packages/
+          sudo mv -v packages/Mull-*.rpm /tmp/packages/
       - uses: ./.github/actions/attach-package
         with:
           GH_API_KEY: ${{ secrets.GITHUB_TOKEN }}
