--- a/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
+++ b/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
@@ -1,4 +1,4 @@
-name: Ubuntu-arm64 22.04 CI
+name: Ubuntu 24.04 (x86_64) CI
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -10,11 +10,11 @@ on:
     branches: ["main"]
 jobs:
   build-and-test:
-    runs-on: ubuntu-24.04-arm
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        LLVM_VERSION: [13, 14, 15]
-    name: Ubuntu-arm64 22.04 - LLVM ${{ matrix.LLVM_VERSION }}
+        LLVM_VERSION: [14, 15, 16, 17, 18, 19]
+    name: Ubuntu 24.04 - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/setup-bazel-cache
@@ -28,8 +28,8 @@ jobs:
       - name: Build, test, package
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/mull-project/internal-ubuntu-arm64_22.04-llvm-${{ matrix.LLVM_VERSION }}-ci
-          configFile: ./.devcontainer/ubuntu_22.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-ubuntu-x86_64_24.04-llvm-${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/ubuntu_24.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
             mkdir -p packages
             # https://arrdem.com/2024/01/11/bazel-glibc/
@@ -41,12 +41,15 @@ jobs:
         uses: devcontainers/ci@v0.3
         if: env.CLOUDSMITH_API_KEY != null
         with:
-          imageName: ghcr.io/mull-project/internal-ubuntu-arm64_22.04-llvm-${{ matrix.LLVM_VERSION }}-ci
-          configFile: ./.devcontainer/ubuntu_22.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-ubuntu-x86_64_24.04-llvm-${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/ubuntu_24.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           push: never
           env: CLOUDSMITH_API_KEY
           runCmd: |
-            bazel run publish && exit 0
+            build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
+            bazel run publish \
+              --copt=-DPLATFORM_FINGERPRINT=$build_salt \
+              --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
 
             max_attempts=3
             attempt=1
@@ -54,7 +57,9 @@ jobs:
             do
               echo "Attempt $attempt failed. Retrying..."
               attempt=$((attempt+1))
-              bazel run publish && exit 0
+              bazel run publish \
+                --copt=-DPLATFORM_FINGERPRINT=$build_salt \
+                --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
             done
             echo "All $max_attempts attempts failed."
             exit 1
