--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,8 +10,15 @@ bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_shell", version = "0.4.0")
 bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")
 bazel_dep(name = "rules_multirun", version = "0.11.0")
-
+bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
 bazel_dep(name = "toolchains_llvm", version = "1.5.0")
+bazel_dep(name = "rules_cc", version = "0.1.1")
+bazel_dep(name = "spdlog", version = "1.15.1")
+bazel_dep(name = "reproc", version = "14.2.5")
+bazel_dep(name = "sqlite3", version = "3.49.1")
+bazel_dep(name = "googletest", version = "1.16.0")
+bazel_dep(name = "rules_python", version = "1.3.0")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
 
 TOOLCHAIN_VERSION = "18450561443"
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
@@ -48,13 +55,6 @@ use_repo(llvm, "llvm_toolchain")
 
 register_toolchains("@llvm_toolchain//:all")
 
-bazel_dep(name = "rules_cc", version = "0.1.1")
-
-bazel_dep(name = "spdlog", version = "1.15.1")
-bazel_dep(name = "reproc", version = "14.2.5")
-bazel_dep(name = "sqlite3", version = "3.49.1")
-bazel_dep(name = "googletest", version = "1.16.0")
-
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
 http_archive(
@@ -64,8 +64,6 @@ http_archive(
     strip_prefix = "json11-402bcde713fbef0c67276fb09b07ffbe8ee13956",
     build_file = ":third_party/json11/json11.BUILD",
 )
-
-bazel_dep(name = "rules_python", version = "1.3.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
 python.toolchain(
@@ -83,14 +81,14 @@ pip.parse(
 
 use_repo(pip, "pypi")
 
-bazel_dep(name = "bazel_skylib", version = "1.7.1")
-
 mull_supported_llvm_versions = use_extension("//:mull_supported_llvm_versions.bzl", "mull_supported_llvm_versions")
 mull_supported_llvm_versions.configure(
     os_version_mapping = {
         "macos": ["16", "17", "18", "19"],
         "ubuntu:22.04": ["13", "14", "15"],
         "ubuntu:24.04": ["14", "15", "16", "17", "18", "19"],
+        "rhel:9.6": ["19"],
+        "rhel:10.0": ["19"],
     },
 )
 use_repo(mull_supported_llvm_versions, "supported_llvm_versions")
@@ -125,8 +123,6 @@ http_archive(
     integrity = "sha256-br2KkRgBtrgmOjrl7Y3nK4cR/tkomEw++udDyw9FbOE=",
 )
 
-bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
-
 _ALL_CONTENT = """
 filegroup(
     name = "all_srcs",
@@ -145,3 +141,7 @@ http_archive(
     ],
     integrity = "sha256-Ogg56lnV/aNDhZxLt3lAdx17XVQe47zhnIcQRArU/1M=",
 )
+
+find_rpmbuild = use_extension("@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl", "find_system_rpmbuild_bzlmod")
+use_repo(find_rpmbuild, "rules_pkg_rpmbuild")
+register_toolchains("@rules_pkg_rpmbuild//:all")
