Make it runner specific

--- a/.github/actions/setup-bazel-cache/action.yml
+++ b/.github/actions/setup-bazel-cache/action.yml
@@ -23,6 +23,7 @@ runs:
         echo "common --compilation_mode opt" > .bazel.compilation_mode.bazelrc
     # https://arrdem.com/2024/01/11/bazel-glibc/
     - name: Setup Bazel salt
+      if: runner.os == 'Linux'
       shell: bash
       run: |
         build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
