--- a/.github/workflows/ci-macOS-arm64.yml
+++ b/.github/workflows/ci-macOS-arm64.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           git config --global --add safe.directory $PWD
       - uses: actions/checkout@v5
+      - uses: ./.github/actions/detect-package-metadata
       - uses: ./.github/actions/setup-bazel-cache
         with:
           BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
