--- a/.bazelrc
+++ b/.bazelrc
@@ -2,3 +2,4 @@ common --test_output=errors
 
 try-import .bazel.buildbuddy.rc
 try-import .bazel.compilation_mode.bazelrc
+try-import .bazel.build_salt.bazelrc
