--- a/.github/workflows/ci-Ubuntu_22.04-arm64.yml
+++ b/.github/workflows/ci-Ubuntu_22.04-arm64.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: ./.github/actions/setup-bazel-cache
         with:
           BUILDBUDDY_API_KEY: ${{ secrets.BUILDBUDDY_API_KEY }}
+          PLATFORM: ubuntu-22.04-arm64
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -33,10 +34,8 @@ jobs:
           configFile: ./.devcontainer/ubuntu_22.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
             mkdir -p packages
-            # https://arrdem.com/2024/01/11/bazel-glibc/
-            build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
-            bazel build //... --copt=-DPLATFORM_FINGERPRINT=$build_salt --action_env=PLATFORM_FINGERPRINT=$build_salt
-            bazel test //... --copt=-DPLATFORM_FINGERPRINT=$build_salt --action_env=PLATFORM_FINGERPRINT=$build_salt
+            bazel build //...
+            bazel test //...
             mv -v bazel-bin/Mull-*.deb packages/
       - name: Publish package
         uses: devcontainers/ci@v0.3
@@ -47,10 +46,7 @@ jobs:
           push: never
           env: CLOUDSMITH_API_KEY
           runCmd: |
-            build_salt=`ldd --version | sha256sum | awk ' {print $1} '`
-            bazel run publish \
-              --copt=-DPLATFORM_FINGERPRINT=$build_salt \
-              --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
+            bazel run publish && exit 0
 
             max_attempts=3
             attempt=1
@@ -58,9 +54,7 @@ jobs:
             do
               echo "Attempt $attempt failed. Retrying..."
               attempt=$((attempt+1))
-              bazel run publish \
-                --copt=-DPLATFORM_FINGERPRINT=$build_salt \
-                --action_env=PLATFORM_FINGERPRINT=$build_salt && exit 0
+              bazel run publish && exit 0
             done
             echo "All $max_attempts attempts failed."
             exit 1
