feat: add LLVM 20 support (#1)
This pull request adds support for LLVM 20 across the project, updates supported LLVM versions in various configuration files, and introduces a new development container setup for Ubuntu 24.04 with LLVM 20. It also includes necessary code changes to maintain compatibility with LLVM 20's API updates.

**LLVM 20 Support and Compatibility:**

* Added LLVM 20 to the supported versions matrix for Ubuntu 24.04 (both arm64 and x86_64), macOS, and the Bazel module configuration (`.github/workflows/ci-Ubuntu_24.04-arm64.yml`, `.github/workflows/ci-Ubuntu_24.04-x86_64.yml`, `.github/workflows/ci-macOS-arm64.yml`, `MODULE.bazel`). [[1]](diffhunk://#diff-9c973ae1aadd7d691c6b02ffda88b23247675eafe6c1cddb02ceaadb02d884cdL16-R16) [[2]](diffhunk://#diff-c3e10f7830d4ac7d29b51d708b4eee302f31cdbf01bc9f7f8569d42f76e8fb85L16-R16) [[3]](diffhunk://#diff-02a40453b73efbdb461835646d62ebaac82eeedf77b3cdfd0072f30ef1560ae9L17-R17) [[4]](diffhunk://#diff-6136fc12446089c3db7360e923203dd114b6a1466252e71667c6791c20fe6bdcL84-R86) [[5]](diffhunk://#diff-6136fc12446089c3db7360e923203dd114b6a1466252e71667c6791c20fe6bdcR104)
* Updated C++ source files to handle LLVM 20 API changes, specifically by including `llvm/Support/VirtualFileSystem.h` and passing the real file system to `createDiagnostics` where required (`lib/JunkDetection/CXX/ASTStorage.cpp`, `tests/unit/Helpers/InMemoryCompiler.cpp`). [[1]](diffhunk://#diff-18a9ada978cdb57c5b48b0c7a4db6dfb4ff13f5a9eb6d28766bb8c50a1ce45f0R7-R14) [[2]](diffhunk://#diff-18a9ada978cdb57c5b48b0c7a4db6dfb4ff13f5a9eb6d28766bb8c50a1ce45f0L238-R248) [[3]](diffhunk://#diff-8a3ce0d8ff83cc696f52fd313b8b199a58d322d6dfda5a4ef7dc34bd107d72c5R11-R13) [[4]](diffhunk://#diff-8a3ce0d8ff83cc696f52fd313b8b199a58d322d6dfda5a4ef7dc34bd107d72c5L38-R45)

**Development Environment Enhancements:**

* Added a new devcontainer configuration for Ubuntu 24.04 with LLVM 20, including a Dockerfile that installs all required dependencies and development tools (`.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -81,9 +81,9 @@ use_repo(pip, "pypi")
 mull_supported_llvm_versions = use_extension("//:mull_supported_llvm_versions.bzl", "mull_supported_llvm_versions")
 mull_supported_llvm_versions.configure(
     os_version_mapping = {
-        "macos": ["16", "17", "18", "19"],
+        "macos": ["16", "17", "18", "19", "20"],
         "ubuntu:22.04": ["13", "14", "15"],
-        "ubuntu:24.04": ["14", "15", "16", "17", "18", "19"],
+        "ubuntu:24.04": ["14", "15", "16", "17", "18", "19", "20"],
         "rhel:9.6": ["19"],
         "rhel:10.0": ["19"],
     },
@@ -101,6 +101,7 @@ SUPPORTED_LLVM_VERSIONS = [
     "17",
     "18",
     "19",
+    "20",
 ]
 
 available_llvm_versions = use_extension("//:mull_available_llvm_versions.bzl", "available_llvm_versions")
