--- a/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
+++ b/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        LLVM_VERSION: [14, 15, 16, 17, 18, 19]
+        LLVM_VERSION: [14, 15, 16, 17, 18, 19, 20]
     name: Ubuntu 24.04 - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
       - uses: actions/checkout@v5
