--- a/.github/workflows/ci-RHEL_9.6-x86_64.yml
+++ b/.github/workflows/ci-RHEL_9.6-x86_64.yml
@@ -33,6 +33,7 @@ jobs:
           imageName: ghcr.io/mull-project/internal-rhel-x86_64_9.6-llvm-${{ matrix.LLVM_VERSION }}-ci
           configFile: ./.devcontainer/rhel_9.6-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
+            set -e
             mkdir -p packages
             bazel build //...
             bazel test //...
