--- a/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
+++ b/.github/workflows/ci-Ubuntu_24.04-x86_64.yml
@@ -33,6 +33,7 @@ jobs:
           imageName: ghcr.io/mull-project/internal-ubuntu-x86_64_24.04-llvm-${{ matrix.LLVM_VERSION }}-ci
           configFile: ./.devcontainer/ubuntu_24.04-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
+            set -e
             mkdir -p packages
             bazel build //...
             bazel test //...
