--- a/.github/workflows/ci-RHEL_10.0-arm64.yml
+++ b/.github/workflows/ci-RHEL_10.0-arm64.yml
@@ -36,12 +36,13 @@ jobs:
             set -e
             mkdir -p packages
             bazel build //...
-            bazel test //... || true
-            cp -v bazel-bin/tests/end2end/fmt_sqlite_report_${{ matrix.LLVM_VERSION }}.sqlite packages/ || true
+            bazel build //tests/end2end:fmt_sqlite_report_${{ matrix.LLVM_VERSION }}
+            cp -v bazel-bin/tests/end2end/fmt_sqlite_report_${{ matrix.LLVM_VERSION }}.sqlite packages/
+            bazel test //...
             mv -v bazel-bin/Mull-*.rpm packages/
-      - name: Upload SQLite database for debugging
+      - name: Upload SQLite database on test failure
         uses: actions/upload-artifact@v4
-        if: always()
+        if: failure()
         with:
           name: fmt-sqlite-report-rhel-arm64-10.0-llvm-${{ matrix.LLVM_VERSION }}
           path: packages/fmt_sqlite_report_${{ matrix.LLVM_VERSION }}.sqlite
